Final exam folder

--- a/Exams/Mid_LabExam/Lab_Task_1/Layout.html
+++ b/Exams/Mid_LabExam/Lab_Task_1/Layout.html
@@ -138,7 +138,7 @@
                     <p>Build a landing page with product showcase.</p>
                   </div>
                   <div>
-                    <a href="" target="_blank">Lab Task 1: Landing Page with Bootstrap</a>
+                    <a href="http://127.0.0.1:5500/Lab_Task_1/Layout.html" target="_blank">Lab Task 1: Landing Page with Bootstrap</a>
                     <p>Add responsiveness and UI plugins.</p>
                   </div>
                   <div>
